# euler

./: .gitignore  .travis.runhaskell.yml  .travis.yml  LICENSE  NOTICE  README.md  Setup.hs  changelog.md  euler.cabal  utils.go
benchmark/: Benchmark.hs
benchmark/Numeric/Euler/: PrimesBenchmark.hs
src/: Euler.hs
src/Numeric/Euler/: Integers.hs  Primes.hs
test/: EulerSpec.hs  HPC.hs  haddock.hs
test/Numeric/Euler/: IntegersSpec.hs  PrimesSpec.hs
