name:                euler
version:             0.3.1
synopsis:            Mathematics utilities for Haskell
description:         Mathematics utilities and functions for Haskell, currently aimed at solving problems in Project Euler.
homepage:            https://github.com/decomputed/euler
license:             MIT
license-file:        LICENSE
author:              Luis Rodrigues Soares
maintainer:          luis@decomputed.com
stability:           alpha
bug-reports:         https://github.com/decomputed/euler/issues
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Numeric.Euler.Primes
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7, euler >= 0.3.0 && < 0.4,hspec == 2.*
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/decomputed/euler