cabal-version: 3.0

name:                 euler
version:              0.10.1
build-type:           Simple
synopsis:             Mathematics utilities for Haskell
description:          Mathematics utilities and functions for Haskell, currently aimed at solving problems in Project Euler.
homepage:             https://github.com/luisonthekeyboard/euler
license:              MIT
license-file:         LICENSE
author:               Luis Rodrigues Soares
maintainer:           luis@luisonthekeyboard.com
stability:            alpha
bug-reports:          https://github.com/luisonthekeyboard/euler/issues
category:             Math
extra-source-files:   README.md changelog.md

library
  build-depends:      base >= 4.1
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Numeric.Euler.Primes, Numeric.Euler.Integers
--  ghc-options:        -Wall

test-suite spec
  build-depends:      base >= 4.1 , hspec >= 2.7, euler >= 0.10
  default-language:   Haskell2010
  hs-source-dirs:     test, src
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
--  ghc-options:        -Wall

-- test-suite hpc
--   ghc-options:        -Wall
--   default-language:   Haskell2010
--   hs-source-dirs:     test
--   main-is:            HPC.hs
--   type:               exitcode-stdio-1.0
--   build-depends:      base,
--                       process >= 1.2,
--                       xml >= 1.3,
--                       directory >= 1.2

-- test-suite hlint
--   ghc-options:        -Wall
--   default-language:   Haskell2010
--   hs-source-dirs:     test
--   main-is:            HLint.hs
--   type:               exitcode-stdio-1.0
--   build-tool-depends: happy:happy >= 1.19
--   build-depends:      base >= 4.12,
--                       hlint >= 1.9

-- test-suite haddock
--   ghc-options:        -Wall
--   default-language:   Haskell2010
--   hs-source-dirs:     test
--   main-is:            haddock.hs
--   type:               exitcode-stdio-1.0
--   build-depends:      base >= 4.12,
--                       process >= 1.2,
--                       regex-posix >= 0.95

-- benchmark criterion
--   ghc-options:        -Wall
--   default-language:   Haskell2010
--   hs-source-dirs:     benchmark
--   main-is:            Benchmark.hs
--   type:               exitcode-stdio-1.0
--   build-depends:      base >= 4.12,
--                       euler == 0.10.*,
--                       criterion >= 1.0.2

source-repository head
  type:               git
  location:           https://github.com/luisonthekeyboard/euler
